--- a/callback.html
+++ b/callback.html
@@ -135,17 +135,23 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5 callBackSubmit">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Submit your details</p>
+    <div class="container mt-5 pt-5 mb-5 callBackSubmit">
+        <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
+            <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="allimgBtnbox">
+                        <p class="wishlistHead">Submit your details</p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>    
         </div>
     </div>
 
-    <div class="container mb-5 callBackMain">
+    <div class="container mb-5 pb-5 callBackMain">
         <div class="signUpIn">
             <div class="signUpInContent">
                 <form>
@@ -174,7 +180,7 @@
                         </div>
                     </div>
                     <div class="sinUpBtn text-end">
-                        <button class="btns" id="callBackSubmit" type="submit">
+                        <button class="btns signUpBtn" id="callBackSubmit" type="submit">
                             <a href="#">
                                 Submit
                             </a>
@@ -185,21 +191,27 @@
         </div>
     </div>
 
-    <div class="container callBackMsg mt-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">
-                    <span class="sliderAlFnt">thank you</span> for your query
-                </p>
+    <div class="container callBackMsg mt-5 pt-5 pb-5 mb-5">
+        <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
+            <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="allimgBtnbox">
+                        <p class="wishlistHead">
+                            <span class="sliderAlFnt">thank you</span> for your query
+                        </p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
+                <p class="pt-4 text-center" style="font-size: 20px;">We will get back to you within 3 working days.</p>
+        
+                    <div class="placeOrderBtn text-center mt-4 mb-5">
+                        <button class="btns signUpBtn">Discover more</button>
+                    </div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
         </div>
-        <p class="pt-4 text-center" style="font-size: 20px;">We will get back to you within 3 working days.</p>
-
-            <div class="placeOrderBtn text-center mt-4 mb-5">
-                <button class="btns">Discover more</button>
-            </div>
     </div>
 
 
@@ -273,18 +285,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
