--- a/diamondjourney.html
+++ b/diamondjourney.html
@@ -140,7 +140,7 @@
     </div>
 
     <div class="container diamondUpper pt-4">
-        <div class="diamondLogo text-center mt-5 mb-4">
+        <div class="diamondLogo text-center mt-5 mb-3">
             <img src="img/other/heading.png" class="img-fluid">
         </div>
         <div class="diamondLargeTxt text-center txtFadedAll">
@@ -225,7 +225,7 @@
         </div>
     </div>
 
-    <section class="diamondSmallConatainer downSmallDiamondRelative">
+    <section class="diamondSmallConatainer downSmallDiamondRelative mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 diamondLeft_box margin-Bottom_diamond">
@@ -326,18 +326,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
