--- a/wishlist.html
+++ b/wishlist.html
@@ -140,7 +140,7 @@
     </div>
 
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-4">
         <div class="row">
             <div class="col-lg-1 col-md-1 col-sm-12"></div>
             <div class="col-lg-10 col-md-10 col-sm-12">
@@ -169,10 +169,10 @@
         <div class="container">
             <p class="txtFadedAll wishlistProdTxt">Product</p>
             <div class="wishlistPerPod mb-3">
-                <div class="wishProdDelete">
+                <div class="wishProdDelete wishProdX2">
                     <span class="wishProdCross">X</span>
                 </div>
-                <div class="row">
+                <div class="row wishlist_row pb-5">
                     <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
                         <div class="row">
                             <div class="col-lg-2 col-md-4 col-sm-12">
@@ -193,12 +193,12 @@
                     </div>
                 </div>
             </div>
-            <hr class="mt-5 mb-5 wishLishHr">
+            <!-- <hr class="mt-5 mb-5 wishLishHr"> -->
             <div class="wishlistPerPod mb-3">
-                <div class="wishProdDelete">
+                <div class="wishProdDelete wishProdX2">
                     <span class="wishProdCross">X</span>
                 </div>
-                <div class="row">
+                <div class="row wishlist_row pb-5 mt-5">
                     <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
                         <div class="row">
                             <div class="col-lg-2 col-md-4 col-sm-12">
@@ -219,12 +219,12 @@
                     </div>
                 </div>
             </div>
-            <hr class="mt-5 mb-5 wishLishHr">
+            <!-- <hr class="mt-5 mb-5 wishLishHr"> -->
             <div class="wishlistPerPod">
                 <div class="wishProdDelete">
                     <span class="wishProdCross">X</span>
                 </div>
-                <div class="row">
+                <div class="row mt-5">
                     <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
                         <div class="row">
                             <div class="col-lg-2 col-md-4 col-sm-12">
@@ -320,16 +320,17 @@
                         <div class="certImg">
                             <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;"
+                                        class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
