--- a/arrival.html
+++ b/arrival.html
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <div class="ring-upper-txt text-center mt-5">
+    <div class="ring-upper-txt text-center mt-5 pb-4">
         <h2 class="allHeading txtFadedAll">
             New
             <span class="sliderAlFnt">Arrivals</span>
@@ -176,7 +176,7 @@
         </div>
     </div>
 
-    <section class="ring-product mt-3 mb-5">
+    <section class="ring-product mt-3 mb-5 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
@@ -335,7 +335,7 @@
     </section>
 
 
-    <section class="producySlider mt-5 mb-5 pt-3">
+    <section class="producySlider mt-5 mb-5 pt-3 pb-5">
         <div class="sliderHead text-center mb-5 mt-5">
             <h2 class="allHeading txtFadedAll">
                 Explore
@@ -445,16 +445,16 @@
                         <div class="certImg">
                             <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
