--- a/cart.html
+++ b/cart.html
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-4 pt-4">
         <div class="row">
             <div class="col-lg-1 col-md-1 col-sm-12"></div>
             <div class="col-lg-10 col-md-10 col-sm-12">
@@ -164,8 +164,8 @@
         <button class="btns">Discover now</button>
     </div> -->
 
-    <section class="container mb-5">
-        <div class="tableBoxCart">
+    <section class="container mb-5 pb-5">
+        <div class="tableBoxCart pb-4">
             <div class="cartContent">
                 <table class="mb-2">
                     <tr class="upperTrCartTable">
@@ -205,7 +205,7 @@
                 </table>
 
                 <div class="cartDownBtn mt-2">
-                    <div class="orderSum txtFadedAll">Order summery</div>
+                    <div class="orderSum txtFadedAll">Order summary</div>
                     <div class="cartCheckoutBtn">
                         <button class="btns">
                             <a href="./checkout.html">
@@ -288,18 +288,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
