--- a/checkout.html
+++ b/checkout.html
@@ -407,7 +407,7 @@
     </section>
 
     <section class="wholeCheckOut2 mb-5 pb-5">
-        <div class="container">
+        <div class="container pb-5">
             <div class="downCheckout row">
                 <div class="checkoutPaymentMsg col-lg-6 col-md-7 col-sm-12 txtFadedAll text-start">Your personal data will be used to process your order, support your
                     experience throughout this website, and for other purposes described in our privacy policy
@@ -495,18 +495,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
