--- a/compare.html
+++ b/compare.html
@@ -138,8 +138,8 @@
             </div>
         </div>
     </div>
-    <section class="productDetails mt-5 mb-5">
-        <div class="container">
+    <section class="productDetails mt-5 pt-5 pb-5 mb-5">
+        <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="Compare_box_img">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
-                    <div class="headerIcon mt-4">
+                    <div class="headerIcon2 d-flex mt-3">
                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
@@ -335,18 +335,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
