--- a/contactus.html
+++ b/contactus.html
@@ -142,12 +142,17 @@
 
     <section class="contact_us_section">
         <div class="container mt-5 pt-4 mb-3">
-            <div class="all-Img-Btn text-center">
-                <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-                <div class="allimgBtnbox">
-                    <p class="wishlistHead">Connect with us</p>
+            <div class="contactbox_Container">
+                <div></div>
+                <div>
+                    <div class="all-Img-Btn text-center">
+                        <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                        <div class="allimgBtnbox">
+                            <p class="wishlistHead">Connect with us</p>
+                        </div>
+                        <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                    </div>
                 </div>
-                <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
             </div>
         </div>
     </section>
@@ -155,7 +160,7 @@
     <div class="concernMsgCU txtFadedAll text-center mb-5">
         <p>Should you wish to share your concerns, we are listening</p>
     </div>
-    <section class="contact_us_section">
+    <section class="contact_us_section pb-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -167,7 +172,7 @@
                                 </div>
                                 <div class="perContactInput">
                                     <input type="text">
-                            </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 mb-3">
@@ -177,7 +182,7 @@
                                 </div>
                                 <div class="perContactInput">
                                     <input type="text">
-                            </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -206,25 +211,25 @@
         </div>
     </section>
 
-    <section class="contact_us_section">
-    <div class="container mt-4 mb-3">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Store locator:</p>
+    <section class="contact_us_section pt-5">
+        <div class="container mt-5 mb-4">
+            <div class="all-Img-Btn text-center">
+                <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                <div class="allimgBtnbox">
+                    <p class="wishlistHead">Store locator:</p>
+                </div>
+                <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
-    </div>
     </section>
 
-    <div class="container">
+    <div class="container pb-5 mb-5">
         <div class="ContactUsMap">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.9257290183555!2d88.34948821479148!3d22.544454785197203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027719edb0a0e7%3A0xcd02026af3bb0d91!2sChirag%20Jewellers!5e0!3m2!1sen!2sin!4v1643621207054!5m2!1sen!2sin"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="shareBtnContact text-end mb-5">
+        <div class="shareBtnContact text-end mb-4">
             <img src="img/other/share.png" class="img-fluid">
         </div>
         <div class="DownPaymentContactUs mb-5">
@@ -319,16 +324,17 @@
                         <div class="certImg">
                             <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;"
+                                        class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
