--- a/gift.html
+++ b/gift.html
@@ -193,15 +193,15 @@
                                     <img src="img/other/diamond2.png">
                                 </div>
                                 <div class="per_cut_img">
-                                    <img src="img/other/diamond3.png">
+                                    <img src="img/other/diamond-5.png">
                                 </div>
                             </div>
                             <div class="d-flex cut_images mt-3">
                                 <div class="per_cut_img">
-                                    <img src="img/other/diamond4.png">
+                                    <img src="img/other/diamond3.png">
                                 </div>
                                 <div class="per_cut_img">
-                                    <img src="img/other/diamond-5.png">
+                                    <img src="img/other/diamond4.png">
                                 </div>
                                 <div class="per_cut_img">
                                     <img src="img/other/diamond-6.png">
@@ -420,12 +420,22 @@
                                 onchange="priceChange()" id="priceSecdInput">
                         </div>
                     </div>
-                    <div class="input_values mt-4 d-flex txtFadedAll">
-                        <div class="text-center">
-                            <span id="PriceVal1">5000</span> <span>/-</span>
+                    <div class="input_values_Price mt-4 d-flex justify-content-between txtFadedAll">
+                        <div class="gift_price_box d-flex">
+                            <div class="gftPriceRs">
+                                Rs.
+                            </div>
+                            <div class="text-center price_input_box">
+                                <span id="PriceVal1">5000</span>
+                            </div>
                         </div>
-                        <div class="text-center">
-                            <span id="PriceVal2">4000000</span> <span>/-</span>
+                        <div class="gift_price_box d-flex">
+                            <div class="gftPriceRs">
+                                Rs.
+                            </div>
+                            <div class="text-center price_input_box">
+                                <span id="PriceVal2">4000000</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -434,7 +444,7 @@
         </div>
     </section>
 
-    <div class="container mb-5">
+    <div class="container pb-5 mb-5">
         <div class="giftTable-Box">
             <table class="mb-2">
                 <tr class="giftUpperHeader_table">
@@ -748,18 +758,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
