--- a/orderplaced.html
+++ b/orderplaced.html
@@ -136,8 +136,8 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5 pt-4">
-        <div class="row">
+    <div class="container mt-5 mb-5 pt-5 pb-5">
+        <div class="row pb-4">
             <div class="col-lg-1 col-md-1 col-sm-12"></div>
             <div class="col-lg-10 col-md-10 col-sm-12">
                 <div class="all-Img-Btn text-center">
@@ -231,18 +231,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
