--- a/ourstory.html
+++ b/ourstory.html
@@ -189,21 +189,27 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="story-dot d-flex">
-                <div></div>
-                <div></div>
+    <div class="container mt-5 mb-5 pt-4 pb-4">
+        <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
+            <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="story-dot d-flex">
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
         </div>
     </div>
 
-    <div class="container text-center txtFadedAll">
+    <div class="container text-center txtFadedAll pb-5 mb-4">
         <h2 class="allHeading mb-5">
             A Chirag
-            <span class="sliderAlFnt">Promise</span>
+            <span class="sliderAlFnt">promise</span>
         </h2>
 
         <p class="story-para-txt">
@@ -341,18 +347,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
