--- a/product.html
+++ b/product.html
@@ -147,8 +147,8 @@
             </div>
         </div>
     </div>
-    <section class="productDetails mt-5 pb-5">
-        <div class="container">
+    <section class="productDetails mt-5 pb-5 pt-5">
+        <div class="container pt-4">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="prodDetUImg">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
-                    <div class="headerIconProd d-flex mt-4">
+                    <div class="headerIconProd d-flex mt-3">
                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
@@ -184,14 +184,14 @@
                             </a>
                         </div>
                     </div>
-                    <p class="prodDetLargetxt txtFadedAll mb-0 mt-5">
+                    <p class="prodDetLargetxt txtFadedAll mb-0 pt-4 mt-3">
                         Diamond ring (R-445)
                     </p>
                     <div class="smlTxtprodDet txtFadedAll mb-3">Rs. 204,000.00</div>
                     <p class="txtFadedAll pt-2">The price mentioned is exclusive of 3% goods and services tax. <br>
                         Description : Diamond Colour – EF | Diamond Clarity – VVS
                     </p>
-                    <div class="prodDetSize mt-4 txtFadedAll">
+                    <div class="prodDetSize mt-4 pt-2 txtFadedAll">
                         <p class="m-0">Size</p>
                         <div class="sizeBoxProd mt-4">
                             <span class="ProdSizeBtn">45</span>
@@ -236,8 +236,8 @@
         </div>
     </section>
 
-    <section class="producySlider mt-5 mb-5">
-        <div class="sliderHead text-center mb-5 mt-5 pt-5">
+    <section class="producySlider mt-5 mb-5 pt-4 pb-4">
+        <div class="sliderHead text-center mb-5 mt-5 pb-3 pt-5">
             <h2 class="allHeading">
                 <span class="sliderAlFnt">Trending</span>
                 Ring
@@ -351,18 +351,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
