--- a/ranisa.html
+++ b/ranisa.html
@@ -151,11 +151,11 @@
         <img src="img/other/raisana.png" class="img-fluid">
     </div>
 
-    <section class="ranisaBack mb-5">
-        <div class="container">
+    <section class="ranisaBack mb-5 pt-5 pb-5">
+        <div class="container pb-5">
             <div class="row raniSaupeerRow">
                 <div class="col-lg-2 col-md-2 col-sm-12"></div>
-                <div class="col-lg-8 col-md-8 col-sm-12 text-center">
+                <div class="col-lg-8 col-md-8 col-sm-12 pb-5 text-center">
                     <p class="txtFadedAll">
                         Underpinned by our heritage, our curated collection of ethically sourced natural diamond rings
                         have their own
@@ -221,9 +221,9 @@
         </div>
     </section>
 
-    <section class="producySlider mt-5 mb-5 pt-5">
+    <section class="producySlider mt-5 mb-5 pt-5 pb-5">
         <div class="sliderHead text-center mb-5 mt-5">
-            <h2 class="allHeading">
+            <h2 class="allHeading txtFadedAll">
                 Explore
                 <span class="sliderAlFnt">Categories</span>
             </h2>
@@ -330,18 +330,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -383,7 +383,7 @@
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: true,
-            margin: 10,
+            margin: 17,
             nav: false,
             dots: false,
             autoplay: true,
