--- a/ring.html
+++ b/ring.html
@@ -650,7 +650,7 @@
         </div>
     </section>
 
-    <div class="container py-4 mt-4 mb-5">
+    <div class="container pt-4 mt-4 mb-5">
         <div class="all-Img-Btn text-center">
             <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
             <div class="allimgBtnbox">
@@ -660,7 +660,7 @@
         </div>
     </div>
 
-    <section class="producySlider mt-5 mb-5 pt-3">
+    <section class="producySlider mt-5 mb-5 pt-2 pb-4">
         <div class="sliderHead text-center mb-5 mt-5">
             <h2 class="allHeading txtFadedAll">
                 Other
@@ -768,18 +768,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
