--- a/signin.html
+++ b/signin.html
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 pt-4 mb-5">
         <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-12"></div>
             <div class="col-lg-8 col-md-8 col-sm-12">
@@ -155,7 +155,7 @@
         </div>
     </div>
 
-    <div class="container mb-5">
+    <div class="container mb-5 signupInContainer">
         <div class="signUpIn">
             <div class="signUpInContent">
                 <form>
@@ -176,11 +176,11 @@
                         </div>
                     </div>
                     <div class="sinUpBtn text-end">
-                        <button class="btns" type="submit" disabled="true">Sign in</button>
+                        <button class="btns signUpBtn" type="submit" disabled="true">Sign in</button>
                     </div>
                 </form>
 
-                <div class="alternateSignBox mt-5 text-center">
+                <div class="alternateSignBox mt-4 text-center">
                     <div class="altSigncontent">
                         <span>
                             <span class="txtFadedAll">
@@ -273,18 +273,18 @@
                             Certification
                         </div>
                         <div class="certImg">
-                            <div class="footerCertImg">
+                           <div class="footerCertImg">
                                 <div class="footerCertperImg ftrImg1">
-                                    <img src="img/sponser-1.png">
+                                    <img src="img/sponser-1.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-3.png">
+                                    <img src="img/sponser-3.png" class="img-fluid">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-4.png">
+                                    <img src="img/sponser-4.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
